app/globals.css
@import "tailwindcss";

:root {
  --background: #fbfefd;
  --base: #ecfdf5;
  --foreground: #171717;
  --prim: #009966;
  --seco: #61726b;
  --nut-prim: #ecfdf5;
}

@font-face {
  font-family: dana;
  src: url('/fonts/dana\ medium.ttf');
}

@font-face {
  font-family: dana-b;
  src: url('/fonts/dana\ bold.ttf');
}

@font-face {
  font-family: dana-db;
  src: url('/fonts/dana\ demibold.ttf');
}

@font-face {
  font-family: dana-xb;
  src: url('/fonts/dana\ extrabold.ttf');
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

/*@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
} */

body {
  background: var(--background);
  color: var(--foreground);
  font-family: dana;
}

/* swiper */
.swiper {
  z-index: -1;
}

.swiper-button-next, .swiper-button-prev {
  @apply opacity-0 text-black/40! hover:text-black/80! duration-200 md:block! hidden! scale-90 active:scale-85
}

.swiper:hover .swiper-button-next {
  @apply opacity-100 
}

.swiper:hover .swiper-button-prev {
  @apply opacity-100
}

